Format, fix number filter overflow

--- a/client/src/app/login/login.module.scss
+++ b/client/src/app/login/login.module.scss
@@ -1,8 +1,9 @@
 @font-face {
-  font-family: 'Material Symbols';
-  font-style: normal;
-  font-weight: 100 700;
-  src: url(https://fonts.gstatic.com/s/materialsymbolsoutlined/v160/kJEhBvYX7BgnkSrUwT8OhrdQw4oELdPIeeII9v6oFsI.woff2) format('woff2');
+	font-family: 'Material Symbols';
+	font-style: normal;
+	font-weight: 100 700;
+	src: url(https://fonts.gstatic.com/s/materialsymbolsoutlined/v160/kJEhBvYX7BgnkSrUwT8OhrdQw4oELdPIeeII9v6oFsI.woff2)
+		format('woff2');
 }
 
 .container {
@@ -66,6 +67,6 @@
 }
 
 .google_symbol {
-	font-family: "Material Symbols";
+	font-family: 'Material Symbols';
 	font-weight: 700;
 }
